tests/baselines/reference/ES5For-of11.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of11.ts(2,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of11.ts (1 errors) ====
    var v;
    for (v of []) { }
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.